refactor: code cleaning